Bug 580952 - Expose an Tabs module that handles tabs from all browser windows Replace the existing Tabs/TabsManager object with the Tabs module that exposes allTabs, onChange, onClose, onMove, onOpen, onSelect.
UltraBlame original commit: 41d8af181a3424c70ecceb0e09845f6600b404e7

--- a/browser/base/Makefile.in
+++ b/browser/base/Makefile.in
@@ -638,3 +638,36 @@ DMENUBAR_CAN_AUTOHIDE
 =
 1
 endif
+libs
+:
+:
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+nsinstall
+.
+py
+(
+srcdir
+)
+/
+content
+/
+tabview
+/
+modules
+/
+*
+(
+FINAL_TARGET
+)
+/
+modules
+/
+tabview
