Run the TabCandy tests from the correct Makefile
UltraBlame original commit: 81bef9b49fc4351556b2b2cef46e0fcfedb87742

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -412,6 +412,10 @@ base
 content
 /
 test
+DIRS
++
+=
+tabview
 include
 (
 DEPTH
@@ -983,36 +987,6 @@ browser_tabfocus
 js
 \
 browser_tabs_owner
-.
-js
-\
-tabview
-/
-browser_tabview_dragdrop
-.
-js
-\
-tabview
-/
-browser_tabview_group
-.
-js
-\
-tabview
-/
-browser_tabview_launch
-.
-js
-\
-tabview
-/
-browser_visibleTabs
-.
-js
-\
-tabview
-/
-browser_visibleTabs_contextMenu
 .
 js
 \
