--- a/security/manager/Makefile.in
+++ b/security/manager/Makefile.in
@@ -1181,6 +1181,14 @@ ABS_DIST
 DEFAULT_GMAKE_FLAGS
 +
 =
+SOURCE_MDHEADERS_DIR
+=
+(
+NSPR_INCLUDE_DIR
+)
+DEFAULT_GMAKE_FLAGS
++
+=
 DIST
 =
 (
@@ -1238,6 +1246,16 @@ DEFAULT_GMAKE_FLAGS
 SQLITE_LIB_NAME
 =
 mozsqlite3
+DEFAULT_GMAKE_FLAGS
++
+=
+SQLITE_INCLUDE_DIR
+=
+(
+ABS_DIST
+)
+/
+include
 endif
 ifdef
 NSS_DISABLE_DBM
@@ -1479,44 +1497,6 @@ MACOS_SDK_DIR
 )
 endif
 endif
-#
-Turn
-off
-TLS
-compression
-support
-because
-NSS
-3
-.
-12
-.
-6
-can
-'
-t
-be
-built
-#
-with
-Mozilla
-'
-s
-zlib
-.
-h
-.
-See
-bug
-527659
-comment
-10
-.
-DEFAULT_GMAKE_FLAGS
-+
-=
-NSS_ENABLE_ZLIB
-=
 #
 Disable
 building
