--- a/browser/components/privatebrowsing/test/browser/Makefile.in
+++ b/browser/components/privatebrowsing/test/browser/Makefile.in
@@ -453,23 +453,11 @@ browser_console_clear
 .
 js
 \
-browser_privatebrowsing_beforeunload_enter
-.
-js
-\
-browser_privatebrowsing_beforeunload_exit
-.
-js
-\
 browser_privatebrowsing_certexceptionsui
 .
 js
 \
 browser_privatebrowsing_commandline_toggle
-.
-js
-\
-browser_privatebrowsing_cookieacceptdialog
 .
 js
 \
@@ -614,6 +602,46 @@ sjs
 (
 NULL
 )
+#
+Turn
+off
+private
+browsing
+tests
+that
+perma
+-
+timeout
+on
+Linux
+.
+ifneq
+(
+Linux
+(
+OS_ARCH
+)
+)
+_BROWSER_TEST_FILES
++
+=
+\
+browser_privatebrowsing_beforeunload_enter
+.
+js
+\
+browser_privatebrowsing_beforeunload_exit
+.
+js
+\
+browser_privatebrowsing_cookieacceptdialog
+.
+js
+\
+(
+NULL
+)
+endif
 libs
 :
 :
