Bug 586194 - move never pref check into selectUpdate and use services js module in app updat. r=dtownsend, approval2.0=bsmedberg
UltraBlame original commit: c727df97c28cf4a0eb4a808f8238b7cb270c24ea

--- a/toolkit/mozapps/update/test/chrome/Makefile.in
+++ b/toolkit/mozapps/update/test/chrome/Makefile.in
@@ -607,6 +607,10 @@ test_0112_neverButton_billboard
 .
 xul
 \
+test_0113_showNeverForVersionRemovedWithPref
+.
+xul
+\
 test_0120_cert_valid_attributes_not_builtin
 .
 xul
