Bug 556644 - 10. Make windows installer locale repacks use the standard repacking path, r=rs,khuey a=blocking2.0
UltraBlame original commit: 7cf1fba2029a2c75c89281c28f68c2b1a49b323f

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -854,6 +854,44 @@ uninstall
 ;
 \
 (
+RM
+)
+(
+_ABS_DIST
+)
+/
+l10n
+-
+stage
+/
+setup
+.
+exe
+;
+\
+cp
+.
+.
+/
+installer
+/
+windows
+/
+l10ngen
+/
+setup
+.
+exe
+(
+_ABS_DIST
+)
+/
+l10n
+-
+stage
+;
+\
+(
 NULL
 )
 endif
@@ -1712,173 +1750,6 @@ DEPTH
 MOZ_BRANDING_DIRECTORY
 )
 export
-if
-test
-!
--
-d
-(
-_ABS_DIST
-)
-/
-(
-PKG_INST_PATH
-)
-;
-then
-\
-(
-NSINSTALL
-)
--
-D
-(
-_ABS_DIST
-)
-/
-(
-PKG_INST_PATH
-)
-;
-\
-fi
-(
-RM
-)
--
-rf
-l10n
--
-stage
-(
-NSINSTALL
-)
--
-D
-l10n
--
-stage
-(
-CYGWIN_WRAPPER
-)
-7z
-x
--
-ol10n
--
-stage
-(
-WIN32_INSTALLER_IN
-)
-(
-RM
-)
--
-r
-l10n
--
-stage
-/
-localized
-(
-RM
-)
-l10n
--
-stage
-/
-setup
-.
-exe
-#
-copy
-xpi
--
-stage
-over
-but
-not
-install
-.
-rdf
-and
-chrome
-.
-manifest
-#
-those
-are
-just
-for
-language
-packs
-cp
--
-r
-(
-DIST
-)
-/
-xpi
--
-stage
-/
-locale
--
-(
-AB_CD
-)
-l10n
--
-stage
-/
-localized
-(
-RM
-)
-l10n
--
-stage
-/
-localized
-/
-install
-.
-rdf
-l10n
--
-stage
-/
-localized
-/
-chrome
-.
-manifest
-mv
-l10n
--
-stage
-/
-localized
-/
-chrome
-/
-(
-AB_CD
-)
-.
-manifest
-l10n
--
-stage
-/
-localized
-/
-chrome
-/
-localized
-.
-manifest
 (
 MAKE
 )
@@ -1903,119 +1774,42 @@ l10ngen
 7zSD
 .
 sfx
-cp
-.
-.
-/
-installer
-/
-windows
-/
-l10ngen
-/
-setup
-.
-exe
-l10n
--
-stage
 (
-NSINSTALL
+MAKE
 )
+repackage
 -
-D
-l10n
--
-stage
-/
-localized
-/
-uninstall
-cp
-.
-.
-/
-installer
-/
-windows
-/
-l10ngen
-/
-helper
-.
-exe
-l10n
--
-stage
-/
-localized
-/
-uninstall
-rm
--
-f
-app
-.
-7z
-cd
-l10n
--
-stage
-&
-&
+zip
 \
+AB_CD
+=
 (
-CYGWIN_WRAPPER
+AB_CD
 )
-7z
-a
--
-r
--
-t7z
-.
-.
+\
+MOZ_PKG_FORMAT
+=
+SFX7Z
+\
+ZIP_IN
+=
+(
+WIN32_INSTALLER_IN
+)
+\
+ZIP_OUT
+=
+(
+WIN32_INSTALLER_OUT
+)
+\
+SFX_HEADER
+=
+"
+(
+PWD
+)
 /
-app
-.
-7z
--
-mx
--
-m0
-=
-BCJ2
--
-m1
-=
-LZMA
-:
-d24
--
-m2
-=
-LZMA
-:
-d19
--
-m3
-=
-LZMA
-:
-d19
--
-mb0
-:
-1
--
-mb0s1
-:
-2
--
-mb0s2
-:
-3
-cat
 .
 .
 /
@@ -2042,19 +1836,7 @@ windows
 app
 .
 tag
-\
-app
-.
-7z
->
-(
-WIN32_INSTALLER_OUT
-)
-chmod
-0755
-(
-WIN32_INSTALLER_OUT
-)
+"
 ifeq
 (
 WINNT
