Bug 556644 - 9. Add support for packaging omnijar, r=bsmedberg a=blocking2.0
UltraBlame original commit: d37b6b33722759cc84e51001d721b835e62e89f0

--- a/browser/installer/Makefile.in
+++ b/browser/installer/Makefile.in
@@ -596,6 +596,29 @@ D_MSC_VER
 _MSC_VER
 )
 endif
+ifeq
+(
+(
+MOZ_CHROME_FILE_FORMAT
+)
+jar
+)
+DEFINES
++
+=
+-
+DJAREXT
+=
+.
+jar
+else
+DEFINES
++
+=
+-
+DJAREXT
+=
+endif
 #
 Don
 '
