bug 573290, bug 583591 - disable crashreporter xpcshell tests on Linux again until we can figure out why they're failing
UltraBlame original commit: 69e2e34ccddc892a0c582e0e1b7ccc5df04843ab

--- a/modules/plugin/test/mochitest/Makefile.in
+++ b/modules/plugin/test/mochitest/Makefile.in
@@ -702,6 +702,27 @@ xul
 (
 NULL
 )
+#
+Temporarily
+disable
+the
+tests
+on
+Linux
+see
+bug
+573290
+and
+bug
+583591
+.
+ifneq
+(
+(
+OS_ARCH
+)
+Linux
+)
 ifdef
 MOZ_CRASHREPORTER
 _MOCHICHROME_FILES
@@ -723,6 +744,7 @@ xul
 (
 NULL
 )
+endif
 endif
 ifeq
 (
