Bug 572680 - Create gfxDrawable interface and implementations for surfaces, patterns and drawing callbacks. r=joe
UltraBlame original commit: 0fa683b7233de09df0471a31a9b337e2d507045e

--- a/gfx/thebes/Makefile.in
+++ b/gfx/thebes/Makefile.in
@@ -67,6 +67,10 @@ gfxContext
 .
 h
 \
+gfxDrawable
+.
+h
+\
 gfxFont
 .
 h
@@ -544,6 +548,10 @@ gfxCachedTempSurface
 cpp
 \
 gfxContext
+.
+cpp
+\
+gfxDrawable
 .
 cpp
 \
