partial backout of bug 580679 - Build NSS with the TLS zlib compression code a=bsmedberg
UltraBlame original commit: 0b20b89a66cd381d39112cf2035a480e159c1440

--- a/security/manager/Makefile.in
+++ b/security/manager/Makefile.in
@@ -1498,6 +1498,30 @@ MACOS_SDK_DIR
 endif
 endif
 #
+Turn
+off
+TLS
+compression
+support
+because
+it
+requires
+system
+zlib
+.
+#
+See
+bug
+580679
+comment
+18
+.
+DEFAULT_GMAKE_FLAGS
++
+=
+NSS_ENABLE_ZLIB
+=
+#
 Disable
 building
 of
