Bug 507012: function call/return callback for profiling, r=dmandelin, a=sayrer
UltraBlame original commit: dfd97ce2b1991ae5b2555c698f039d622bb4dc1d

--- a/configure.in
+++ b/configure.in
@@ -1378,9 +1378,9 @@ SQLITE_VERSION
 =
 3
 .
-7
+6
 .
-0
+23
 .
 1
 LIBNOTIFY_VERSION
@@ -46380,11 +46380,19 @@ assembler
 AC_CHECK_PROGS
 (
 VPX_AS
-YASM
 yasm
 "
 "
 )
+if
+test
+-
+n
+"
+VPX_AS
+"
+;
+then
 dnl
 We
 have
@@ -46574,80 +46582,11 @@ fi
 ;
 ;
 esac
-if
-test
--
-n
-"
-VPX_X86_ASM
-"
--
-a
--
-z
-"
-VPX_AS
-"
-;
-then
-AC_MSG_ERROR
-(
-[
-yasm
-is
-a
-required
-build
-tool
-for
-this
-architecture
-when
-webm
-is
-enabled
-.
-You
-may
-either
-install
-yasm
-or
--
--
-disable
--
-webm
-(
-which
-disables
-the
-WebM
-video
-format
-)
-.
-See
-https
-:
-/
-/
-developer
-.
-mozilla
-.
-org
-/
-en
-/
-YASM
-for
-more
-details
-.
-]
-)
 fi
+#
+end
+have
+YASM
 fi
 #
 end
@@ -48867,13 +48806,6 @@ darwin
 *
 |
 powerpc
--
-apple
--
-darwin
-*
-|
-x86_64
 -
 apple
 -
@@ -60869,6 +60801,172 @@ WRAP_MALLOC_LIB
 =
 withval
 )
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Use
+JS
+Call
+tracing
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+trace
+-
+jscalls
+[
+-
+-
+enable
+-
+trace
+-
+jscalls
+Enable
+JS
+call
+enter
+/
+exit
+callback
+(
+default
+=
+no
+)
+]
+MOZ_TRACE_JSCALLS
+=
+1
+MOZ_TRACE_JSCALLS
+=
+)
+if
+test
+-
+n
+"
+MOZ_TRACE_JSCALLS
+"
+;
+then
+AC_DEFINE
+(
+MOZ_TRACE_JSCALLS
+)
+fi
 dnl
 =
 =
