Bug 585175 - Don't automangle ctypes stdcall symbols for WINAPI. r=bsmedberg, a=blocker
UltraBlame original commit: 1973d4086362bbb0633ea3bbc5583a1934dd67f2

--- a/toolkit/components/ctypes/tests/unit/test_jsctypes.js.in
+++ b/toolkit/components/ctypes/tests/unit/test_jsctypes.js.in
@@ -7237,6 +7237,92 @@ sum_tests
 sum_many_tests
 )
 ;
+/
+/
+Check
+that
+declaring
+a
+WINAPI
+function
+gets
+the
+right
+symbol
+name
+.
+let
+libuser32
+=
+ctypes
+.
+open
+(
+"
+user32
+.
+dll
+"
+)
+;
+let
+charupper
+=
+libuser32
+.
+declare
+(
+"
+CharUpperA
+"
+ctypes
+.
+winapi_abi
+ctypes
+.
+char
+.
+ptr
+ctypes
+.
+char
+.
+ptr
+)
+;
+let
+hello
+=
+ctypes
+.
+char
+.
+array
+(
+)
+(
+"
+hello
+!
+"
+)
+;
+do_check_eq
+(
+charupper
+(
+hello
+)
+.
+readString
+(
+)
+"
+HELLO
+!
+"
+)
+;
 #
 endif
 #
@@ -19178,6 +19264,69 @@ __stdcall
 "
 )
 ;
+f3_t
+=
+ctypes
+.
+FunctionType
+(
+ctypes
+.
+winapi_abi
+ctypes
+.
+char
+.
+ptr
+.
+array
+(
+)
+.
+ptr
+)
+.
+ptr
+.
+ptr
+.
+array
+(
+8
+)
+.
+array
+(
+)
+;
+do_check_eq
+(
+f3_t
+.
+name
+"
+char
+*
+(
+*
+(
+WINAPI
+*
+*
+[
+]
+[
+8
+]
+)
+(
+)
+)
+[
+]
+"
+)
+;
 #
 endif
 #
@@ -21250,6 +21399,48 @@ test_void_t
 undefined
 )
 ;
+/
+/
+Check
+that
+WINAPI
+symbol
+lookup
+for
+a
+regular
+stdcall
+function
+fails
+.
+do_check_throws
+(
+function
+(
+)
+{
+let
+test_winapi_t
+=
+library
+.
+declare
+(
+"
+test_void_t_stdcall
+"
+ctypes
+.
+winapi_abi
+ctypes
+.
+void_t
+)
+;
+}
+Error
+)
+;
 #
 endif
 #
@@ -22665,6 +22856,62 @@ stdcall
 "
 )
 ;
+/
+/
+Check
+that
+attempting
+to
+construct
+a
+ctypes
+.
+winapi_abi
+closure
+throws
+.
+function
+closure_fn
+(
+)
+{
+return
+1
+;
+}
+let
+fn_t
+=
+ctypes
+.
+FunctionType
+(
+ctypes
+.
+winapi_abi
+ctypes
+.
+int32_t
+[
+]
+)
+.
+ptr
+;
+do_check_throws
+(
+function
+(
+)
+{
+fn_t
+(
+closure_fn
+)
+}
+Error
+)
+;
 #
 endif
 #
@@ -23125,6 +23372,38 @@ FunctionType
 ctypes
 .
 stdcall_abi
+ctypes
+.
+bool
+[
+ctypes
+.
+bool
+"
+.
+.
+.
+"
+]
+)
+;
+}
+Error
+)
+;
+do_check_throws
+(
+function
+(
+)
+{
+ctypes
+.
+FunctionType
+(
+ctypes
+.
+winapi_abi
 ctypes
 .
 bool
