--- a/layout/base/tests/Makefile.in
+++ b/layout/base/tests/Makefile.in
@@ -595,10 +595,6 @@ test_bug450930
 .
 xhtml
 \
-test_bug458898
-.
-html
-\
 test_bug465448
 .
 xul
@@ -749,6 +745,23 @@ because
 of
 bug
 469208
+#
+Test
+for
+bug
+458898
+doesn
+'
+t
+pass
+on
+Windows
+7
+.
+See
+bug
+562955
+.
 ifeq
 (
 (
@@ -762,6 +775,10 @@ MOZ_WIDGET_TOOLKIT
 _TEST_FILES
 +
 =
+\
+test_bug458898
+.
+html
 \
 bidi_numeral_test
 .
@@ -1282,10 +1299,6 @@ html
 test_bug499538
 -
 1
-.
-html
-\
-test_bug569520
 .
 html
 \
