Fix bustage on Mac PPC.
UltraBlame original commit: 40059b618f3ae80ec7caac3afc05fee9ab002125

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1421,6 +1421,68 @@ endif
 endif
 #
 ENABLE_TRACEJIT
+ifeq
+(
+(
+TARGET_CPU
+)
+powerpc
+)
+VPATH
++
+=
+(
+srcdir
+)
+/
+assembler
+\
+(
+srcdir
+)
+/
+assembler
+/
+wtf
+\
+(
+srcdir
+)
+/
+yarr
+/
+pcre
+\
+(
+NULL
+)
+CPPSRCS
++
+=
+pcre_compile
+.
+cpp
+\
+pcre_exec
+.
+cpp
+\
+pcre_tables
+.
+cpp
+\
+pcre_xclass
+.
+cpp
+\
+pcre_ucp_searchfuncs
+.
+cpp
+\
+(
+NULL
+)
+else
 #
 #
 #
@@ -1546,6 +1608,9 @@ yarr
 /
 wtf
 \
+(
+NONE
+)
 CPPSRCS
 +
 =
@@ -1589,25 +1654,9 @@ RegexJIT
 .
 cpp
 \
-pcre_compile
-.
-cpp
-\
-pcre_exec
-.
-cpp
-\
-pcre_tables
-.
-cpp
-\
-pcre_xclass
-.
-cpp
-\
-pcre_ucp_searchfuncs
-.
-cpp
+(
+NONE
+)
 ifeq
 (
 86
@@ -1726,6 +1775,7 @@ assembler
 #
 #
 #
+endif
 ifdef
 JS_HAS_CTYPES
 VPATH
