--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1654,6 +1654,26 @@ RegexJIT
 .
 cpp
 \
+pcre_compile
+.
+cpp
+\
+pcre_exec
+.
+cpp
+\
+pcre_tables
+.
+cpp
+\
+pcre_xclass
+.
+cpp
+\
+pcre_ucp_searchfuncs
+.
+cpp
+\
 (
 NONE
 )
