Bug 584841 patch 4: Rename imgDiscardTracker source files. r=bholley a=blocking
UltraBlame original commit: 9ecc5f41e0aa4f5f0044555f3fbeb9c4c382a15c

--- a/modules/libpr0n/src/Makefile.in
+++ b/modules/libpr0n/src/Makefile.in
@@ -436,6 +436,10 @@ Image
 .
 cpp
 \
+DiscardTracker
+.
+cpp
+\
 imgContainer
 .
 cpp
@@ -457,10 +461,6 @@ imgRequestProxy
 cpp
 \
 imgTools
-.
-cpp
-\
-imgDiscardTracker
 .
 cpp
 \
