Bug 584841 patch 9: Move RasterImage-specific methods from imgIContainer interface to RasterImage class. r=bholley sr=vlad a=blocking
UltraBlame original commit: 205795b2962a27572df753003a849d27c537ee5e

--- a/modules/libpr0n/decoders/jpeg/Makefile.in
+++ b/modules/libpr0n/decoders/jpeg/Makefile.in
@@ -439,6 +439,29 @@ CSRCS
 iccjpeg
 .
 c
+#
+nsJPEGDecoder
+.
+cpp
+includes
+RasterImage
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+src
+/
 include
 (
 topsrcdir
