--- a/modules/libpr0n/decoders/bmp/Makefile.in
+++ b/modules/libpr0n/decoders/bmp/Makefile.in
@@ -449,6 +449,36 @@ cpp
 nsIconDecoder
 .
 cpp
+#
+ns
+[
+BMP
+ICO
+Icon
+]
+Decoder
+.
+cpp
+all
+include
+RasterImage
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+src
+/
 include
 (
 topsrcdir
