--- a/modules/libpr0n/decoders/png/Makefile.in
+++ b/modules/libpr0n/decoders/png/Makefile.in
@@ -469,6 +469,29 @@ DEFINES
 -
 DMOZ_PNG_READ
 endif
+#
+nsPNGDecoder
+.
+cpp
+includes
+RasterImage
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+src
+/
 include
 (
 topsrcdir
