Bug 580407 - Link js statically r=bsmedberg+khuey a=bsmedberg
UltraBlame original commit: b6c7ed5a29223eb18b84ed4c76a88800a266568f

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -624,9 +624,6 @@ MOZ_CALLGRIND
 MOZ_VTUNE
 =
 MOZ_VTUNE
-MOZ_TRACE_JSCALLS
-=
-MOZ_TRACE_JSCALLS
 MOZ_TRACEVIS
 =
 MOZ_TRACEVIS
@@ -2159,3 +2156,6 @@ ANDROID_TOOLS
 ANDROID_VERSION
 =
 ANDROID_VERSION
+JS_SHARED_LIBRARY
+=
+JS_SHARED_LIBRARY
