--- a/configure.in
+++ b/configure.in
@@ -734,6 +734,57 @@ AC_SUBST
 (
 MOZ_DEB_TIMESTAMP
 )
+MOZ_ARG_ENABLE_BOOL
+(
+shared
+-
+js
+[
+-
+-
+enable
+-
+shared
+-
+js
+Create
+a
+shared
+JavaScript
+library
+.
+]
+ENABLE_SHARED_JS
+=
+1
+ENABLE_SHARED_JS
+=
+0
+)
+if
+test
+"
+ENABLE_SHARED_JS
+"
+=
+"
+1
+"
+;
+then
+JS_SHARED_LIBRARY
+=
+1
+else
+AC_DEFINE
+(
+MOZ_STATIC_JS
+)
+fi
+AC_SUBST
+(
+JS_SHARED_LIBRARY
+)
 dnl
 =
 =
@@ -10230,6 +10281,29 @@ libimg
 png
 )
 '
+if
+test
+-
+z
+"
+JS_SHARED_LIBRARY
+"
+;
+then
+MOZ_JS_LIBS
+=
+'
+-
+L
+(
+LIBXUL_DIST
+)
+/
+bin
+-
+ljs_static
+'
+else
 MOZ_JS_LIBS
 =
 '
@@ -10243,6 +10317,7 @@ bin
 -
 lmozjs
 '
+fi
 DYNAMIC_XPCOM_LIBS
 =
 '
@@ -17472,6 +17547,29 @@ CV
 '
 MOZ_FIX_LINK_PATHS
 =
+if
+test
+-
+z
+"
+JS_SHARED_LIBRARY
+"
+;
+then
+MOZ_JS_LIBS
+=
+'
+(
+LIBXUL_DIST
+)
+/
+lib
+/
+js_static
+.
+lib
+'
+else
 MOZ_JS_LIBS
 =
 '
@@ -17485,6 +17583,7 @@ mozjs
 .
 lib
 '
+fi
 OBJ_SUFFIX
 =
 obj
@@ -17897,6 +17996,15 @@ lwinmm
 -
 lwsock32
 "
+if
+test
+-
+z
+"
+JS_SHARED_LIBRARY
+"
+;
+then
 MOZ_JS_LIBS
 =
 '
@@ -17906,10 +18014,25 @@ L
 LIBXUL_DIST
 )
 /
-lib
+bin
+-
+ljs_static
+'
+else
+MOZ_JS_LIBS
+=
+'
+-
+L
+(
+LIBXUL_DIST
+)
+/
+bin
 -
 lmozjs
 '
+fi
 MOZ_FIX_LINK_PATHS
 =
 DYNAMIC_XPCOM_LIBS
@@ -18286,6 +18409,29 @@ MOZ_OPTIMIZE_FLAGS
 -
 O1
 '
+if
+test
+-
+z
+"
+JS_SHARED_LIBRARY
+"
+;
+then
+MOZ_JS_LIBS
+=
+'
+(
+LIBXUL_DIST
+)
+/
+lib
+/
+js_static
+.
+lib
+'
+else
 MOZ_JS_LIBS
 =
 '
@@ -18299,6 +18445,7 @@ mozjs
 .
 lib
 '
+fi
 MOZ_FIX_LINK_PATHS
 =
 DYNAMIC_XPCOM_LIBS
@@ -48872,13 +49019,6 @@ apple
 -
 darwin
 *
-|
-x86_64
--
-apple
--
-darwin
-*
 )
 MOZ_CRASHREPORTER
 =
@@ -60869,172 +61009,6 @@ WRAP_MALLOC_LIB
 =
 withval
 )
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-=
-Use
-JS
-Call
-tracing
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-MOZ_ARG_ENABLE_BOOL
-(
-trace
--
-jscalls
-[
--
--
-enable
--
-trace
--
-jscalls
-Enable
-JS
-call
-enter
-/
-exit
-callback
-(
-default
-=
-no
-)
-]
-MOZ_TRACE_JSCALLS
-=
-1
-MOZ_TRACE_JSCALLS
-=
-)
-if
-test
--
-n
-"
-MOZ_TRACE_JSCALLS
-"
-;
-then
-AC_DEFINE
-(
-MOZ_TRACE_JSCALLS
-)
-fi
 dnl
 =
 =
@@ -77776,6 +77750,28 @@ ac_configure_args
 enable
 -
 ctypes
+"
+fi
+if
+test
+-
+z
+"
+JS_SHARED_LIBRARY
+"
+;
+then
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+disable
+-
+shared
+-
+js
 "
 fi
 if
