--- a/js/src/xpconnect/shell/Makefile.in
+++ b/js/src/xpconnect/shell/Makefile.in
@@ -475,15 +475,22 @@ XPCOM_LIBS
 )
 \
 (
+NULL
+)
+ifdef
+JS_SHARED_LIBRARY
+LIBS
++
+=
+(
 MOZ_JS_LIBS
 )
-\
+endif
+LIBS
++
+=
 (
 NSPR_LIBS
-)
-\
-(
-NULL
 )
 NSDISTMODE
 =
