--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -199,11 +199,16 @@ BINPATH
 dependentlibs
 .
 list
+#
+ifndef
+MOZ_STATIC_JS
 BINPATH
 /
 DLL_PREFIX
 mozjs
 DLL_SUFFIX
+#
+endif
 BINPATH
 /
 DLL_PREFIX
