--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -1331,6 +1331,9 @@ NANOJIT_ARCH
 HAVE_ARM_SIMD
 =
 HAVE_ARM_SIMD
+JS_SHARED_LIBRARY
+=
+JS_SHARED_LIBRARY
 HAVE_LINUX_PERF_EVENT_H
 =
 HAVE_LINUX_PERF_EVENT_H
