--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -2091,6 +2091,58 @@ COMPILE_ENVIRONMENT
 COMPILE_ENVIRONMENT
 =
 )
+MOZ_ARG_ENABLE_BOOL
+(
+shared
+-
+js
+[
+-
+-
+disable
+-
+shared
+-
+js
+Do
+not
+create
+a
+shared
+library
+.
+]
+DISABLE_SHARED_JS
+=
+0
+DISABLE_SHARED_JS
+=
+1
+)
+if
+test
+"
+DISABLE_SHARED_JS
+"
+=
+"
+1
+"
+;
+then
+AC_DEFINE
+(
+STATIC_EXPORTABLE_JS_API
+)
+else
+JS_SHARED_LIBRARY
+=
+1
+fi
+AC_SUBST
+(
+JS_SHARED_LIBRARY
+)
 dnl
 =
 =
@@ -34433,172 +34485,6 @@ fi
 AC_DEFINE
 (
 JS_HAS_CTYPES
-)
-fi
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-=
-Use
-JS
-Call
-tracing
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-MOZ_ARG_ENABLE_BOOL
-(
-trace
--
-jscalls
-[
--
--
-enable
--
-trace
--
-jscalls
-Enable
-JS
-call
-enter
-/
-exit
-callback
-(
-default
-=
-no
-)
-]
-MOZ_TRACE_JSCALLS
-=
-1
-MOZ_TRACE_JSCALLS
-=
-)
-if
-test
--
-n
-"
-MOZ_TRACE_JSCALLS
-"
-;
-then
-AC_DEFINE
-(
-MOZ_TRACE_JSCALLS
 )
 fi
 dnl
