[Bug 587183] TM merge broke android in Nitro. r=sayrer.
UltraBlame original commit: 796b87a413fb276d062fd8e5aa07e72f93f35eba

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -5204,24 +5204,6 @@ the
 Nitro
 assembler
 #
-INCLUDES
-+
-=
--
-I
-(
-srcdir
-)
-/
-assembler
--
-I
-(
-srcdir
-)
-/
-yarr
-#
 #
 Needed
 to
@@ -5262,17 +5244,53 @@ CXXFLAGS
 +
 =
 -
-DENABLE_ASSEMBLER
+DUSE_SYSTEM_MALLOC
 =
 1
+ifeq
+(
+android
+(
+TARGET_VENDOR
+)
+)
+CXXFLAGS
++
+=
 -
-DUSE_SYSTEM_MALLOC
+DWTF_PLATFORM_ANDROID
+=
+1
+else
+CXXFLAGS
++
+=
+-
+DENABLE_ASSEMBLER
 =
 1
 -
 DENABLE_JIT
 =
 1
+endif
+INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+assembler
+-
+I
+(
+srcdir
+)
+/
+yarr
 #
 #
 END
