Bug 578718 Qt should use modern unix keybindings instead of classic keybindings r=ted a=blocking-fennec2.0b1
UltraBlame original commit: f21ae93d9ff1118bd828dd7813e4adbe3ad8a497

--- a/content/xbl/builtin/Makefile.in
+++ b/content/xbl/builtin/Makefile.in
@@ -439,16 +439,20 @@ DIRS
 =
 mac
 else
-ifeq
+ifneq
 (
+(
+filter
+qt
+gtk2
 (
 MOZ_WIDGET_TOOLKIT
 )
-gtk2
+)
 )
 DIRS
 =
-gtk2
+unix
 else
 DIRS
 =
