Bug 587389 - dependentlibs.list not updated properly after bug 580407, r=khuey a=android build bustage
UltraBlame original commit: 5f2c486bc90d986eb7bf011f9a97c9f47ee4fda8

--- a/xpcom/stub/Makefile.in
+++ b/xpcom/stub/Makefile.in
@@ -665,16 +665,21 @@ DLL_SUFFIX
 )
 \
 (
+NULL
+)
+ifdef
+JS_SHARED_LIBRARY
+DEPENDENT_LIBS_LIST
++
+=
+(
 LIB_PREFIX
 )
 mozjs
 (
 DLL_SUFFIX
 )
-\
-(
-NULL
-)
+endif
 ifndef
 MOZ_NATIVE_SQLITE
 ifeq
