--- a/layout/generic/Makefile.in
+++ b/layout/generic/Makefile.in
@@ -745,6 +745,30 @@ topsrcdir
 /
 config
 /
+config
+.
+mk
+include
+(
+topsrcdir
+)
+/
+ipc
+/
+chromium
+/
+chromium
+-
+config
+.
+mk
+include
+(
+topsrcdir
+)
+/
+config
+/
 rules
 .
 mk
