Make --disable-libxul imply --enable-shared-js.  (Bug 587375)  r=ted  a2.0=dbaron
UltraBlame original commit: 33ff08c153d410659d511473d5c5115e5461b64f

--- a/configure.in
+++ b/configure.in
@@ -734,57 +734,6 @@ AC_SUBST
 (
 MOZ_DEB_TIMESTAMP
 )
-MOZ_ARG_ENABLE_BOOL
-(
-shared
--
-js
-[
--
--
-enable
--
-shared
--
-js
-Create
-a
-shared
-JavaScript
-library
-.
-]
-ENABLE_SHARED_JS
-=
-1
-ENABLE_SHARED_JS
-=
-0
-)
-if
-test
-"
-ENABLE_SHARED_JS
-"
-=
-"
-1
-"
-;
-then
-JS_SHARED_LIBRARY
-=
-1
-else
-AC_DEFINE
-(
-MOZ_STATIC_JS
-)
-fi
-AC_SUBST
-(
-JS_SHARED_LIBRARY
-)
 dnl
 =
 =
@@ -10281,16 +10230,7 @@ libimg
 png
 )
 '
-if
-test
--
-z
-"
-JS_SHARED_LIBRARY
-"
-;
-then
-MOZ_JS_LIBS
+MOZ_JS_STATIC_LIBS
 =
 '
 -
@@ -10303,8 +10243,7 @@ bin
 -
 ljs_static
 '
-else
-MOZ_JS_LIBS
+MOZ_JS_SHARED_LIBS
 =
 '
 -
@@ -10317,7 +10256,6 @@ bin
 -
 lmozjs
 '
-fi
 DYNAMIC_XPCOM_LIBS
 =
 '
@@ -17547,16 +17485,7 @@ CV
 '
 MOZ_FIX_LINK_PATHS
 =
-if
-test
--
-z
-"
-JS_SHARED_LIBRARY
-"
-;
-then
-MOZ_JS_LIBS
+MOZ_JS_STATIC_LIBS
 =
 '
 (
@@ -17569,8 +17498,7 @@ js_static
 .
 lib
 '
-else
-MOZ_JS_LIBS
+MOZ_JS_SHARED_LIBS
 =
 '
 (
@@ -17583,7 +17511,6 @@ mozjs
 .
 lib
 '
-fi
 OBJ_SUFFIX
 =
 obj
@@ -17996,16 +17923,7 @@ lwinmm
 -
 lwsock32
 "
-if
-test
--
-z
-"
-JS_SHARED_LIBRARY
-"
-;
-then
-MOZ_JS_LIBS
+MOZ_JS_STATIC_LIBS
 =
 '
 -
@@ -18018,8 +17936,7 @@ bin
 -
 ljs_static
 '
-else
-MOZ_JS_LIBS
+MOZ_JS_SHARED_LIBS
 =
 '
 -
@@ -18032,7 +17949,6 @@ bin
 -
 lmozjs
 '
-fi
 MOZ_FIX_LINK_PATHS
 =
 DYNAMIC_XPCOM_LIBS
@@ -18409,16 +18325,7 @@ MOZ_OPTIMIZE_FLAGS
 -
 O1
 '
-if
-test
--
-z
-"
-JS_SHARED_LIBRARY
-"
-;
-then
-MOZ_JS_LIBS
+MOZ_JS_STATIC_LIBS
 =
 '
 (
@@ -18431,8 +18338,7 @@ js_static
 .
 lib
 '
-else
-MOZ_JS_LIBS
+MOZ_JS_SHARED_LIBS
 =
 '
 (
@@ -18445,7 +18351,6 @@ mozjs
 .
 lib
 '
-fi
 MOZ_FIX_LINK_PATHS
 =
 DYNAMIC_XPCOM_LIBS
@@ -69441,6 +69346,82 @@ MOZ_ENABLE_LIBXUL
 1
 MOZ_ENABLE_LIBXUL
 =
+)
+MOZ_ARG_ENABLE_BOOL
+(
+shared
+-
+js
+[
+-
+-
+enable
+-
+shared
+-
+js
+Create
+a
+shared
+JavaScript
+library
+.
+]
+ENABLE_SHARED_JS
+=
+1
+ENABLE_SHARED_JS
+=
+)
+if
+test
+-
+z
+"
+MOZ_ENABLE_LIBXUL
+"
+;
+then
+dnl
+-
+-
+disable
+-
+libxul
+implies
+shared
+js
+ENABLE_SHARED_JS
+=
+1
+fi
+if
+test
+-
+n
+"
+ENABLE_SHARED_JS
+"
+;
+then
+JS_SHARED_LIBRARY
+=
+1
+MOZ_JS_LIBS
+=
+MOZ_JS_SHARED_LIBS
+else
+MOZ_JS_LIBS
+=
+MOZ_JS_STATIC_LIBS
+AC_DEFINE
+(
+MOZ_STATIC_JS
+)
+fi
+AC_SUBST
+(
+JS_SHARED_LIBRARY
 )
 if
 test
