Bug 587470 - Add mozjs to removed-files.in, r=khuey
UltraBlame original commit: 099d6c0a511cd9eb2a0cfe1ced02632ace4d7919

--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -78,6 +78,14 @@ DLL_SUFFIX
 DLL_PREFIX
 zlib
 DLL_SUFFIX
+#
+ifdef
+MOZ_STATIC_JS
+DLL_PREFIX
+mozjs
+DLL_SUFFIX
+#
+endif
 LICENSE
 browserconfig
 .
