bug 559228 - Update Breakpad to r652 (mozilla build system changes). r=bsmedberg a=blocking
UltraBlame original commit: e93e3a3d3a6c969670c9eee7a7cb1eb59b4bd6df

--- a/toolkit/crashreporter/google-breakpad/src/client/mac/crash_generation/Makefile.in
+++ b/toolkit/crashreporter/google-breakpad/src/client/mac/crash_generation/Makefile.in
@@ -155,16 +155,9 @@ Original
 Code
 is
 #
-Ted
-Mielczarek
-<
-ted
-.
-mielczarek
-gmail
-.
-com
->
+The
+Mozilla
+Foundation
 #
 Portions
 created
@@ -177,7 +170,7 @@ Copyright
 (
 C
 )
-2007
+2010
 #
 the
 Initial
@@ -194,6 +187,17 @@ Contributor
 s
 )
 :
+#
+Ted
+Mielczarek
+<
+ted
+.
+mielczarek
+gmail
+.
+com
+>
 #
 #
 Alternatively
@@ -404,6 +408,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -425,13 +432,13 @@ autoconf
 mk
 MODULE
 =
-breakpad_mac_common
+crash_generation
 LIBRARY_NAME
 =
-breakpad_mac_common_s
-HOST_LIBRARY_NAME
+crash_generation_s
+XPI_NAME
 =
-host_breakpad_mac_common_s
+crashreporter
 LOCAL_INCLUDES
 =
 -
@@ -445,117 +452,19 @@ srcdir
 /
 .
 .
-#
-This
-is
-a
-little
-weird
-but
-we
-'
-re
-building
-a
-host
-and
-a
-target
-lib
-here
+/
 .
-#
-The
-host
-lib
-is
-used
-for
-dump_syms
-and
-the
-target
-lib
-for
-the
-#
-crash
-reporter
-client
-.
-Therefore
-we
-don
-'
-t
-need
-all
-the
-srcs
-in
-both
 .
 CPPSRCS
 =
 \
-file_id
+crash_generation_client
 .
 cc
 \
-macho_id
+crash_generation_server
 .
 cc
-\
-macho_reader
-.
-cc
-\
-macho_utilities
-.
-cc
-\
-macho_walker
-.
-cc
-\
-string_utilities
-.
-cc
-\
-(
-NULL
-)
-CMSRCS
-=
-\
-HTTPMultipartUpload
-.
-m
-\
-(
-NULL
-)
-CMMSRCS
-=
-\
-MachIPC
-.
-mm
-\
-(
-NULL
-)
-HOST_CPPSRCS
-=
-(
-CPPSRCS
-)
-HOST_CMMSRCS
-=
-\
-dump_syms
-.
-mm
 \
 (
 NULL
@@ -577,10 +486,3 @@ config
 rules
 .
 mk
-COMPILE_CMFLAGS
-+
-=
--
-std
-=
-c99
