--- a/toolkit/xre/Makefile.in
+++ b/toolkit/xre/Makefile.in
@@ -979,6 +979,35 @@ client
 /
 mac
 /
+crash_generation
+/
+(
+LIB_PREFIX
+)
+crash_generation_s
+.
+(
+LIB_SUFFIX
+)
+\
+(
+DEPTH
+)
+/
+toolkit
+/
+crashreporter
+/
+google
+-
+breakpad
+/
+src
+/
+client
+/
+mac
+/
 handler
 /
 (
