Bug 550936 - Make InstallTrigger support cross-process communication r=Mossop a=blocking-beta4+,blocking-fennec2.0a1+
UltraBlame original commit: c8dc4dd369ee9b8668685d3a2011473cde7390f1

--- a/toolkit/mozapps/extensions/Makefile.in
+++ b/toolkit/mozapps/extensions/Makefile.in
@@ -419,27 +419,9 @@ mk
 MODULE
 =
 extensions
-LIBRARY_NAME
+XPIDL_MODULE
 =
 extensions
-SHORT_LIBNAME
-=
-extnsion
-IS_COMPONENT
-=
-1
-MODULE_NAME
-=
-AddonsModule
-GRE_MODULE
-=
-1
-LIBXUL_LIBRARY
-=
-1
-EXPORT_LIBRARY
-=
-1
 XPIDLSRCS
 =
 \
@@ -454,16 +436,6 @@ idl
 amIWebInstaller
 .
 idl
-\
-(
-NULL
-)
-CPPSRCS
-=
-\
-amInstallTrigger
-.
-cpp
 \
 (
 NULL
