bug 582644 - IME event remoting, patch to widget r=dougt blocking-fennec=2.0a1+
UltraBlame original commit: 197b54fa96a100267840593be9eac6e3aa74d46d

--- a/widget/public/Makefile.in
+++ b/widget/public/Makefile.in
@@ -417,6 +417,23 @@ widget
 GRE_MODULE
 =
 1
+EXPORTS_NAMESPACES
+=
+mozilla
+/
+widget
+EXPORTS_mozilla
+/
+widget
+=
+\
+nsGUIEventIPC
+.
+h
+\
+(
+NULL
+)
 EXPORTS
 =
 \
