Bug 585855 - Test that the bookmark all tabs command is disabled when we have one visible and one hidden tab [r=dão sr=vlad a=gavin]
UltraBlame original commit: 62d9ac4292784438509be605608eca2924cff2ed

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -998,6 +998,10 @@ browser_visibleTabs_bookmarkAllPages
 .
 js
 \
+browser_visibleTabs_bookmarkAllTabs
+.
+js
+\
 browser_visibleTabs_tabPreview
 .
 js
