Backed out changeset c8dc4dd369ee
UltraBlame original commit: fafc537889901eff93e3a287bbbeb646e6764684

--- a/toolkit/mozapps/extensions/Makefile.in
+++ b/toolkit/mozapps/extensions/Makefile.in
@@ -419,9 +419,27 @@ mk
 MODULE
 =
 extensions
-XPIDL_MODULE
+LIBRARY_NAME
 =
 extensions
+SHORT_LIBNAME
+=
+extnsion
+IS_COMPONENT
+=
+1
+MODULE_NAME
+=
+AddonsModule
+GRE_MODULE
+=
+1
+LIBXUL_LIBRARY
+=
+1
+EXPORT_LIBRARY
+=
+1
 XPIDLSRCS
 =
 \
@@ -436,6 +454,16 @@ idl
 amIWebInstaller
 .
 idl
+\
+(
+NULL
+)
+CPPSRCS
+=
+\
+amInstallTrigger
+.
+cpp
 \
 (
 NULL
