Bug 551434 - Store the keydown target and retarget the keypress/keyup events when focus changes from chrome to content. r=smaug
UltraBlame original commit: f43f9b764efb76c5f190ade3734210a8faa56420

--- a/layout/base/tests/chrome/Makefile.in
+++ b/layout/base/tests/chrome/Makefile.in
@@ -459,6 +459,14 @@ test_bug533845
 .
 xul
 \
+test_bug551434
+.
+html
+\
+bug551434_childframe
+.
+html
+\
 test_chrome_content_integration
 .
 xul
