Bug 557956: Update compatibility information for installed add-ons when the application is upgraded. r=robstrong, a=blocking-beta5
UltraBlame original commit: ab6e93fb7fec763d1f2d67df34ca7c18961fbedd

--- a/toolkit/mozapps/extensions/test/browser/Makefile.in
+++ b/toolkit/mozapps/extensions/test/browser/Makefile.in
@@ -473,6 +473,22 @@ browser_bug557943
 .
 js
 \
+browser_bug557956
+.
+js
+\
+browser_bug557956
+.
+rdf
+\
+browser_bug557956_8_2
+.
+xpi
+\
+browser_bug557956_9_2
+.
+xpi
+\
 browser_bug562890
 .
 js
