Bug 588075 - --disable-libxul is incompatible with omnijar, check this at configure time, r=khuey a=beta5+
UltraBlame original commit: 7d4bf0f596163636588dfb140c3d8b7603675cd1

--- a/configure.in
+++ b/configure.in
@@ -69536,6 +69536,61 @@ libxul
 ]
 )
 fi
+if
+test
+-
+z
+"
+MOZ_ENABLE_LIBXUL
+"
+-
+a
+-
+n
+"
+MOZ_OMNIJAR
+"
+;
+then
+AC_MSG_ERROR
+(
+[
+Omnijar
+packaging
+is
+incompatible
+with
+-
+-
+disable
+-
+libxul
+.
+Please
+either
+-
+-
+enable
+-
+libxul
+or
+-
+-
+enable
+-
+chrome
+-
+format
+=
+jar
+|
+flat
+|
+symlink
+]
+)
+;
+fi
 AC_SUBST
 (
 LIBXUL_LIBS
