Bug 548523 - Replace HTMLMediaElement.autobuffer attribute with 'preload'. r=roc a=blocking2.0
UltraBlame original commit: 42c8cd0e1a657f40917c72941609a5defffb2ed2

--- a/content/media/test/Makefile.in
+++ b/content/media/test/Makefile.in
@@ -801,10 +801,6 @@ test_audio2
 .
 html
 \
-test_autobuffer
-.
-html
-\
 test_autoplay
 .
 html
@@ -1041,7 +1037,7 @@ Bug
 493692
 :
 #
-test_autobuffer2
+test_preload_suspend
 .
 html
 #
