Bug 562444 - e10s: fix external app handler code to enable download manager and others over IPC, r=dwitte, sr=biesi, blocking-fennec2.0a1=mfinkle
UltraBlame original commit: cac7482b3cd83adb4aea32cddfa15704e7822095

--- a/uriloader/exthandler/Makefile.in
+++ b/uriloader/exthandler/Makefile.in
@@ -542,6 +542,79 @@ I
 (
 srcdir
 )
+ifdef
+MOZ_IPC
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+dom
+/
+base
+\
+-
+I
+(
+topsrcdir
+)
+/
+dom
+/
+ipc
+\
+-
+I
+(
+topsrcdir
+)
+/
+content
+/
+base
+/
+src
+\
+-
+I
+(
+topsrcdir
+)
+/
+content
+/
+events
+/
+src
+\
+-
+I
+(
+topsrcdir
+)
+/
+netwerk
+/
+base
+/
+src
+\
+-
+I
+(
+topsrcdir
+)
+/
+netwerk
+/
+protocol
+/
+http
+endif
 ifeq
 (
 (
@@ -654,6 +727,23 @@ nsMIMEInfoOS2
 .
 cpp
 endif
+EXPORTS_NAMESPACES
+=
+mozilla
+/
+dom
+EXPORTS_mozilla
+/
+dom
+=
+\
+ExternalHelperAppParent
+.
+h
+\
+ExternalHelperAppChild
+.
+h
 EXPORTS
 =
 \
@@ -724,6 +814,20 @@ OSHELPER
 (
 NULL
 )
+ifdef
+MOZ_IPC
+CPPSRCS
++
+=
+\
+ExternalHelperAppChild
+.
+cpp
+\
+ExternalHelperAppParent
+.
+cpp
+endif
 ifdef
 MOZ_ENABLE_DBUS
 CPPSRCS
