Bug 587936: Add SSE2 optimizations for alpha recovery. r=vlad a=crowder
UltraBlame original commit: 984f5535954128a960789425d1a986b4b7fba1a5

--- a/gfx/thebes/Makefile.in
+++ b/gfx/thebes/Makefile.in
@@ -664,6 +664,32 @@ cpp
 NULL
 )
 endif
+ifneq
+(
+(
+filter
+x86
+x86_64
+(
+CPU_ARCH
+)
+)
+)
+ifdef
+__GNUC__
+gfxAlphaRecovery
+.
+(
+OBJ_SUFFIX
+)
+:
+MODULE_OPTIMIZE_FLAGS
++
+=
+-
+msse2
+endif
+endif
 SHARED_LIBRARY_LIBS
 +
 =
