--- a/content/media/test/Makefile.in
+++ b/content/media/test/Makefile.in
@@ -993,6 +993,22 @@ use_large_cache
 .
 js
 \
+test_a4_tone
+.
+html
+\
+test_audiowrite
+.
+html
+\
+file_audio_event_adopt_iframe
+.
+html
+\
+test_audio_event_adopt
+.
+html
+\
 (
 NULL
 )
@@ -1302,6 +1318,10 @@ ogg
 video
 -
 overhang
+.
+ogg
+\
+file_a4_tone
 .
 ogg
 \
