Backed out changeset 5c0c9dd09bd9
UltraBlame original commit: 5d36870125a73bf7ba1d8219d830d5fa0efac908

--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -4098,16 +4098,6 @@ txEXSLTRegExFunctions
 js
 components
 /
-WeaveCrypto
-.
-js
-components
-/
-Weave
-.
-js
-components
-/
 WebContentConverter
 .
 js
@@ -4168,20 +4158,16 @@ reporter
 js
 defaults
 /
-pref
-/
-services
--
-sync
-.
-js
-defaults
-/
 profile
 /
 bookmarks
 .
 html
+defaults
+/
+profile
+/
+chrome
 defaults
 /
 profile
@@ -4390,383 +4376,12 @@ Services
 jsm
 modules
 /
-services
--
-sync
-/
-auth
-.
-js
-modules
-/
-services
--
-sync
-/
-base_records
-/
-collection
-.
-js
-modules
-/
-services
--
-sync
-/
-base_records
-/
-crypto
-.
-js
-modules
-/
-services
--
-sync
-/
-base_records
-/
-keys
-.
-js
-modules
-/
-services
--
-sync
-/
-base_records
-/
-wbo
-.
-js
-modules
-/
-services
--
-sync
-/
-constants
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-bookmarks
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-clients
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-forms
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-history
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-passwords
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-prefs
-.
-js
-modules
-/
-services
--
-sync
-/
-engines
-/
-tabs
-.
-js
-modules
-/
-services
--
-sync
-/
-ext
-/
-Observers
-.
-js
-modules
-/
-services
--
-sync
-/
-ext
-/
-Preferences
-.
-js
-modules
-/
-services
--
-sync
-/
-ext
-/
-StringBundle
-.
-js
-modules
-/
-services
--
-sync
-/
-ext
-/
-Sync
-.
-js
-modules
-/
-services
--
-sync
-/
-identity
-.
-js
-modules
-/
-services
--
-sync
-/
-log4moz
-.
-js
-modules
-/
-services
--
-sync
-/
-notifications
-.
-js
-modules
-/
-services
--
-sync
-/
-resource
-.
-js
-modules
-/
-services
--
-sync
-/
-service
-.
-js
-modules
-/
-services
--
-sync
-/
-status
-.
-js
-modules
-/
-services
--
-sync
-/
-stores
-.
-js
-modules
-/
-services
--
-sync
-/
-trackers
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-bookmark
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-clients
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-forms
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-history
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-passwords
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-prefs
-.
-js
-modules
-/
-services
--
-sync
-/
-type_records
-/
-tabs
-.
-js
-modules
-/
-services
--
-sync
-/
-util
-.
-js
-modules
-/
 SpatialNavigation
 .
 js
 modules
 /
 stylePanel
-.
-jsm
-modules
-/
-tabview
-/
-AllTabs
-.
-jsm
-modules
-/
-tabview
-/
-groups
-.
-jsm
-modules
-/
-tabview
-/
-utils
 .
 jsm
 modules
@@ -4833,6 +4448,9 @@ res
 EditorOverride
 .
 css
+res
+/
+entityTables
 res
 /
 entityTables
@@ -5381,6 +4999,11 @@ xpt
 components
 /
 composer
+.
+xpt
+components
+/
+content
 .
 xpt
 components
