Bug 585630 - "disable mochitests that utilize ondragstart attributes at least until tiles die" [r=mark.finkle] a=mobile_test_only
UltraBlame original commit: ea7b16ce2f1ec8b50f37384be46604dda1fdcfc4

--- a/content/events/test/Makefile.in
+++ b/content/events/test/Makefile.in
@@ -575,10 +575,6 @@ test_draggableprop
 .
 html
 \
-test_dragstart
-.
-html
-\
 test_bug489671
 .
 html
@@ -630,6 +626,28 @@ html
 (
 NULL
 )
+#
+bug
+585630
+ifneq
+(
+mobile
+(
+MOZ_BUILD_APP
+)
+)
+_TEST_FILES
++
+=
+\
+test_dragstart
+.
+html
+\
+(
+NULL
+)
+endif
 _CHROME_FILES
 =
 \
