--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -747,6 +747,38 @@ cpp
 (
 NULL
 )
+STATIC_INIT_PASS_TESTCASES
+=
+\
+TestStaticInitStructOK
+.
+cpp
+\
+(
+NULL
+)
+STATIC_INIT_WARNING_TESTCASES
+=
+\
+TestStaticInitAttr
+.
+cpp
+\
+TestStaticInitConstructor
+.
+cpp
+\
+TestStaticInitGlobal
+.
+cpp
+\
+TestStaticInitGlobalConst
+.
+cpp
+\
+(
+NULL
+)
 STATIC_FAILURE_TESTCASES
 =
 \
@@ -781,6 +813,10 @@ STACK_FAILURE_TESTCASES
 )
 \
 (
+STATIC_INIT_WARNING_TESTCASES
+)
+\
+(
 NULL
 )
 STATIC_PASS_TESTCASES
@@ -808,6 +844,10 @@ MUST_OVERRIDE_PASS_TESTCASES
 \
 (
 OVERRIDE_PASS_TESTCASES
+)
+\
+(
+STATIC_INIT_PASS_TESTCASES
 )
 \
 (
