Bug 578235 - Port jsstack.js to Dehydra with GCC 4.5 r=taras, a=test-only
UltraBlame original commit: fbbdd0c89a9fcd05750692509112f0082a9b1701

--- a/js/src/analysis-tests/Makefile.in
+++ b/js/src/analysis-tests/Makefile.in
@@ -439,7 +439,7 @@ config
 autoconf
 .
 mk
-REDGREEN_FAILURE_TESTCASES
+REDGREEN_WARNING_TESTCASES
 =
 \
 green
@@ -601,11 +601,11 @@ cpp
 (
 NULL
 )
-STATIC_FAILURE_TESTCASES
+STATIC_WARNING_TESTCASES
 =
 \
 (
-REDGREEN_FAILURE_TESTCASES
+REDGREEN_WARNING_TESTCASES
 )
 \
 (
@@ -651,7 +651,7 @@ check
 :
 \
 (
-STATIC_FAILURE_TESTCASES
+STATIC_WARNING_TESTCASES
 :
 .
 cpp
@@ -659,7 +659,7 @@ cpp
 .
 s
 -
-fail
+warn
 )
 \
 (
@@ -699,7 +699,7 @@ failed
 .
 s
 -
-fail
+warn
 :
 %
 .
@@ -736,6 +736,8 @@ if
 (
 CCC
 )
+-
+Werror
 (
 OUTOPTION
 )
@@ -779,6 +781,9 @@ of
 F
 )
 succeeded
+with
+-
+Werror
 .
 It
 shouldn
@@ -795,7 +800,39 @@ exit
 1
 ;
 \
-else
+fi
+if
+(
+CCC
+)
+(
+OUTOPTION
+)
+/
+dev
+/
+null
+-
+S
+(
+COMPILE_CXXFLAGS
+)
+(
+_VPATH_SRCS
+)
+>
+(
+*
+F
+)
+.
+werrlog
+2
+>
+&
+1
+;
+then
 \
 printf
 "
@@ -804,6 +841,42 @@ ok
 \
 n
 "
+;
+\
+else
+\
+printf
+"
+fail
+:
+\
+nerror
+:
+compilation
+of
+(
+<
+F
+)
+without
+-
+Werror
+failed
+.
+A
+warning
+should
+have
+been
+issued
+.
+\
+n
+"
+;
+\
+exit
+1
 ;
 \
 fi
