Bug 575720 - static checking suite: use Dehydra multiple-arg support + fix method signature comparison in several scripts r=taras
UltraBlame original commit: 202929ab16697c4c2c13cd912a6d302f72560ab3

--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -684,6 +684,12 @@ OverrideOK2
 .
 cpp
 \
+OverrideOK3
+-
+NamespaceTypedef
+.
+cpp
+\
 (
 NULL
 )
@@ -715,6 +721,14 @@ OVERRIDE_PASS_TESTCASES
 override
 -
 pass
+.
+cpp
+\
+override
+-
+namespace
+-
+typedef
 .
 cpp
 \
