bug 450781 - make xpfe autocomplete build with |--enable-libxul| and build it from build.mk, r=Callek, a=NPOTB for Firefox
UltraBlame original commit: dc81ebe616eeb311c2a760dde7e601b910422824

--- a/xpfe/components/autocomplete/src/Makefile.in
+++ b/xpfe/components/autocomplete/src/Makefile.in
@@ -429,7 +429,9 @@ SHORT_LIBNAME
 xpautoc
 MOZILLA_INTERNAL_API
 =
-1
+(
+BUILD_STATIC_LIBS
+)
 EXPORT_LIBRARY
 =
 1
@@ -446,7 +448,7 @@ EXTRA_DSO_LDOPTS
 =
 \
 (
-MOZ_UNICHARUTIL_LIBS
+XPCOM_GLUE_LDOPTS
 )
 \
 (
