Bug 556644 - Yet another removed-files.in update, r=rs a=blocking-beta5
UltraBlame original commit: 6eead86e13dd65a3c3465770921c2cd132130751

--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -4288,6 +4288,16 @@ modules
 DownloadPaths
 .
 jsm
+#
+ifdef
+XP_WIN
+modules
+/
+DownloadTaskbarProgress
+.
+jsm
+#
+endif
 modules
 /
 DownloadUtils
