MathML Operator Dictionary: make operator with a stretchy form use the same direction for all their forms (bug 534970). r=karlt a=dbaron
UltraBlame original commit: 4428b9c468cd5bc231fda3816b664811146ee1bf

--- a/layout/mathml/mathfont.properties
+++ b/layout/mathml/mathfont.properties
@@ -10726,6 +10726,9 @@ lspace
 rspace
 :
 3
+direction
+:
+vertical
 #
 &
 Coproduct
@@ -10883,6 +10886,9 @@ lspace
 rspace
 :
 3
+direction
+:
+vertical
 #
 &
 Vee
@@ -10900,6 +10906,9 @@ lspace
 rspace
 :
 3
+direction
+:
+vertical
 #
 &
 Wedge
@@ -11980,6 +11989,9 @@ lspace
 rspace
 :
 2
+direction
+:
+horizontal
 #
 ^
 operator
