MathML Operator Dictionary: add private data integral (bug 534970). r=karlt a=dbaron
UltraBlame original commit: 8a52e79553b6a47a0f642e503abaf450bfe3a27d

--- a/layout/mathml/mathfont.properties
+++ b/layout/mathml/mathfont.properties
@@ -10418,6 +10418,7 @@ lspace
 rspace
 :
 1
+integral
 #
 &
 ClockwiseContourIntegral
@@ -10440,6 +10441,7 @@ lspace
 rspace
 :
 1
+integral
 #
 &
 ContourIntegral
@@ -10462,6 +10464,7 @@ lspace
 rspace
 :
 1
+integral
 #
 &
 CounterClockwiseContourIntegral
@@ -10484,6 +10487,7 @@ lspace
 rspace
 :
 1
+integral
 #
 &
 DoubleContourIntegral
@@ -10506,10 +10510,535 @@ lspace
 rspace
 :
 1
+integral
 #
 &
 Integral
 ;
+operator
+.
+\
+u2A0B
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+summation
+with
+integral
+operator
+.
+\
+u222C
+.
+prefix
+=
+lspace
+:
+0
+rspace
+:
+1
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+double
+integral
+operator
+.
+\
+u222D
+.
+prefix
+=
+lspace
+:
+0
+rspace
+:
+1
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+triple
+integral
+operator
+.
+\
+u2230
+.
+prefix
+=
+lspace
+:
+0
+rspace
+:
+1
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+volume
+integral
+operator
+.
+\
+u2231
+.
+prefix
+=
+lspace
+:
+0
+rspace
+:
+1
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+clockwise
+integral
+operator
+.
+\
+u2A0C
+.
+prefix
+=
+lspace
+:
+0
+rspace
+:
+1
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+quadruple
+integral
+operator
+operator
+.
+\
+u2A0D
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+finite
+part
+integral
+operator
+.
+\
+u2A0E
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+double
+stroke
+operator
+.
+\
+u2A0F
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+average
+with
+slash
+operator
+.
+\
+u2A10
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+movablelimits
+integral
+direction
+:
+vertical
+#
+circulation
+function
+operator
+.
+\
+u2A11
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+movablelimits
+integral
+direction
+:
+vertical
+#
+anticlockwise
+integration
+operator
+.
+\
+u2A12
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+movablelimits
+integral
+direction
+:
+vertical
+#
+line
+integration
+with
+rectangular
+path
+around
+pole
+operator
+.
+\
+u2A13
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+movablelimits
+integral
+direction
+:
+vertical
+#
+line
+integration
+with
+semicircular
+path
+around
+pole
+operator
+.
+\
+u2A14
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+movablelimits
+integral
+direction
+:
+vertical
+#
+line
+integration
+not
+including
+the
+pole
+operator
+.
+\
+u2A15
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+around
+a
+point
+operator
+operator
+.
+\
+u2A16
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+quaternion
+integral
+operator
+operator
+.
+\
+u2A17
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+leftwards
+arrow
+with
+hook
+operator
+.
+\
+u2A18
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+times
+sign
+operator
+.
+\
+u2A19
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+intersection
+operator
+.
+\
+u2A1A
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+union
+operator
+.
+\
+u2A1B
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+overbar
+operator
+.
+\
+u2A1C
+.
+prefix
+=
+lspace
+:
+1
+rspace
+:
+2
+symmetric
+largeop
+integral
+direction
+:
+vertical
+#
+integral
+with
+underbar
 operator
 .
 \
